feat: Delete folders && add README.md

--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,9 @@
   background-color: #1e1e22;
 }
 
-.icon-primary-color:hover {
+/* .icon-primary-color:hover {
   background-color: #fc653c;
-}
+} */
 
 .App-logo {
   height: 40vmin;
