--- a/src/utils/vanilla-icons/css/VanillaIcon.css
+++ b/src/utils/vanilla-icons/css/VanillaIcon.css
@@ -3,7 +3,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  transition: all 0.2s;
+  /* transition: all 0.2s; */
 }
 
 .vanilla-icon__color-default {
